kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tools
spec:
  selector:
    matchLabels:
      app: tools
  template:
    metadata:
      labels:
        app: tools
    spec:
      containers:
        - name: tools
          image: dhrp/tools
          command:
            - webserver
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
