kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tools
spec:
  selector:
    app: tools
  ports:
    - port: 8000
      targetPort: 8000
